# nonebot_plugin_bottle

./: .gitignore  .pdm-python  README.md  __init__.py  data_source.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
frontend/: .env.production  package.json  pnpm-lock.yaml  vue.config.js
frontend/src/: main.js  permission.js  settings.js
frontend/src/api/: approve.js  bottle.js  dashboard.js  user.js
frontend/src/layout/components/: Navbar.vue
frontend/src/router/: index.js
frontend/src/store/modules/: user.js
frontend/src/utils/: request.js
frontend/src/views/approve/: index.vue
frontend/src/views/bottles/: index.vue
frontend/src/views/dashboard/: index.vue  statistic.vue
frontend/src/views/login/: index.vue
nonebot_plugin_bottle/: __init__.py  config.py  data_source.py  exception.py  model.py
nonebot_plugin_bottle/migrations/: 01a750736ea0_add_like.py  449e066410fd_init_db.py  8c88e60a419b_add_approve.py  c8a5d6424007_init_db.py
nonebot_plugin_bottle/webui/: __init__.py  api.py  data_source.py  template.py  utils.py
nonebot_plugin_bottle/webui/model/: bottle_resp.py  resp.py
