[tool.poetry]
name = "nonebot_plugin_bottle"
version = "1.0.0.8"
description = "Bottle post plugin in Nonebot"
authors = ["Todysheep <todysheep@163.com>"]
license = "GNU GPLv3"
readme = "README.md"
homepage = "https://github.com/Todysheep/nonebot_plugin_bottle"
repository = "https://github.com/Todysheep/nonebot_plugin_bottle"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0rc1"}
nonebot-adapter-onebot = ">=2.2.0"
aiofiles = ">=0.8.0"
nonebot-plugin-datastore = ">=0.6.0"
httpx = ">=0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"