[tool.poetry]
name = "nonebot_plugin_bottle"
version = "2.0.0.9"
description = "Bottle post plugin in Nonebot"
authors = ["Todysheep <todysheep@163.com>"]
license = "GNU GPLv3"
readme = "README.md"
homepage = "https://github.com/Todysheep/nonebot_plugin_bottle"
repository = "https://github.com/Todysheep/nonebot_plugin_bottle"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0"}
nonebot-adapter-onebot = ">=2.2.0"
aiofiles = ">=0.8.0"
nonebot-plugin-datastore = ">=0.6.0"
httpx = ">=0.23.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
